fix up carousel on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,7 +34,9 @@
 }
 
 
-
+.carouselLeft{
+  margin-left: 5px; 
+}
 
 
 .bgImgShelf{
